# H264Project

./: build.gradle  config.gradle  moduleDebug.gradle  moduleRelease.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
assets/: mix.pcm  myself_cascade.xml  normal.h265
base/baseLib/: build.gradle
base/baseLib/src/main/: AndroidManifest.xml
business/audio/: build.gradle
business/audio/src/main/: AndroidManifest.xml
business/audio/src/main/res/layout/: activity_main.xml
business/camera1/src/debug/: AndroidManifest.xml
business/camera1/src/main/res/layout/: activity_main.xml
business/camera1/src/main/res/values-night/: themes.xml
business/camera2/src/main/: AndroidManifest.xml
business/camera2/src/main/res/layout/: activity_main.xml
business/h264/: build.gradle
business/h264/src/debug/: AndroidManifest.xml
business/h264/src/main/: AndroidManifest.xml
business/h264/src/main/res/layout/: activity_columbus.xml  activity_h264_parse.xml  activity_h264_parse_output.xml  activity_h265.xml  activity_main.xml  activity_screen.xml
business/h264/src/main/res/values/: strings.xml  themes.xml
business/record/src/main/: AndroidManifest.xml
business/record/src/main/res/layout/: activity_main.xml
business/rtmp/src/main/: AndroidManifest.xml
business/rtmp/src/main/cpp/: CMakeLists.txt  native-lib.cpp
business/rtmp/src/main/cpp/librtmp/: CMakeLists.txt
business/rtmp/src/main/res/layout/: activity_main.xml
business/touping/: build.gradle
business/touping/src/debug/: AndroidManifest.xml
business/touping/src/main/: AndroidManifest.xml
business/touping/src/main/res/layout/: activity_main.xml  (+2 more)
business/videochat/: build.gradle
business/videochat/src/debug/: AndroidManifest.xml
business/x264/: build.gradle
business/x264/src/main/: AndroidManifest.xml
business/x264/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
business/x264/src/main/cpp/callback/: JavaCallHelper.cpp  JavaCallHelper.h
business/x264/src/main/cpp/util/: logutil.h
business/x264/src/main/cpp/x264/arm64-v8a/lib/pkgconfig/: x264.pc
core/common/: build.gradle
core/common/src/main/: AndroidManifest.xml
ffmpeg/demo/: CMakeLists.txt  build.gradle
ffmpeg/demo/src/debug/: AndroidManifest.xml
ffmpeg/demo/src/main/cpp/: ffmpeg-lib.cpp
ffmpeg/demo/src/main/java/com/blood/demo/: AssetsUtil.java  MainActivity.kt
ffmpeg/demo/src/main/res/layout/: activity_main.xml
file/opencv/: opencv-trans
file/opencv_train/: lance.data  lance.vec
file/opencv_train/data/: stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml
gradle/wrapper/: gradle-wrapper.properties
high/bitmap/src/main/: AndroidManifest.xml
high/filter/: build.gradle
high/filter/src/debug/: AndroidManifest.xml
high/opencv/: build.gradle
high/opencv/src/debug/: AndroidManifest.xml
high/opencv/src/main/cpp/: CMakeLists.txt  native-lib.cpp
high/opengl/src/debug/: AndroidManifest.xml
high/opengl/src/main/: AndroidManifest.xml
keystore/: sign.config
sample/: sample.activity  sample.gradle
script/: touping_client_debug.sh  touping_push_debug.sh
(+154 files in other folders)
